--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>Corporate Counsel, LLC</title>
+    <title>Color Country Tournaments</title>
     <base href="/">
 
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
@@ -15,7 +16,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
+
 <body>
     <app-root></app-root>
 </body>
+
 </html>
